GAP-20 fixed bug on footer

--- a/src/src/components/footer/Footer.css
+++ b/src/src/components/footer/Footer.css
@@ -18,8 +18,8 @@
     aspect-ratio: auto 130 / 75;
     height: 160px;
 } */
-.icon{
+.img-logo{
     width: 100%;
     height: 100px;
-  
+    object-fit: contain;
 }
